# aula05_bootcamp_desafio_1billion_row

./: README.md  main.py  pyproject.toml  solo.py  solucao_conceitos_aprendidos.py  solucao_professor_python_puro.py
src/: create_measurements.py
